arreglo bug de h1 pisando estilos, mejoro cards con paleta y contraste

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  aligne-items: center;
+  align-items: center;
 }
 .card-container .card {
   padding: 16px;
@@ -23,13 +23,5 @@
   padding: 0;
 }
 
-h1 {
-  margin: 1px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 25vh;
-  background-color: green;
-}
 
 /*# sourceMappingURL=styles.css.map */
